--- a/Charity/احراز هویت/00 - احراز هویت - C#.md
+++ b/Charity/احراز هویت/00 - احراز هویت - C#.md
@@ -48,7 +48,7 @@
 
 + پارامتر ClientInfo یک آبجکت از کلاس ClientInfo باید باشد که در این سرویس مقدار ClientInfo.ClientId ضروری است و باید حتما مقداردهی شود.
 
-
+```
     var output = new HandshakeSrv();
     var handshakeVo = HandshakeVo.ConcreteBuilder
                         .SetAuthorization({Put your ApitToken})
@@ -61,6 +61,7 @@
                         //.SetDeviceType(DeviceType.MobilePhone) //{Put your DeviceType}
                         .Build();
     ssoService.Handshake(handshakeVo, response => Listener.GetResult(response, out output));
+```
 
 <div class="box-end">
 </div>
@@ -77,7 +78,7 @@
 
 - مقدار پارامتر  ResponseType  باید حتما "code" باشد.
 
-
+```
     var output = new SentVerificationDTOSrv();
     var authorizeVo = AuthorizeVo.ConcreteBuilder
                         .SetIdentity(identity)
@@ -95,10 +96,12 @@
                         //.SetResponseType("{Put your ResponseType}")
                         .Build();
     ssoService.Authorize(authorizeVo, response => Listener.GetResult(response, out output));
+```
 
 <div class="box-end">
 </div>
-تایید OTP
+
+## تایید OTP
 
 تایید otp به به صورت کد زیر است که در صورت ورود کد تایید درست و یا نادرست پیغام ورود موفق و ناموفق روی identity ارسالی دریافت خواهید نمود.
 
