--- a/Charity/احراز هویت/00 - احراز هویت - C#.md
+++ b/Charity/احراز هویت/00 - احراز هویت - C#.md
@@ -1,217 +1,293 @@
 
-# احراز هویت - زبان #C
+# احراز هویت - زبان   PHP
 
-برای کار با تمامی سرویس هایی پاد باید توکن دسترسی معتبر داشته باشید. همچنین کسب و کارها جهت تعریف کاربران جدید، دریافت و به روزرسانی پروفایل کاربران خود نیز می توانند از سرویس های پاد استفاده کنند که آن نیز مستلزم داشتن توکن معتبر است. تمامی کارهای دریافت و مدیریت توکن توسط این پکیج انجام می شود. این سامانه بر اساس استاندارد OAuth2.0 پیاده سازی شده است و دانستن این استاندارد می تواند کمک بسیاری به شما بکند.
 
-از پکیج SSO می توانید برای ورود به دو روش وب و OTP (رمز یکبار مصرف استفاده کنید). همانطور که از نام آن مشخص است روش وب را در وب سایت ها استفاده می کنیم و از OTP اکثرا برای ورود با تلفن همراه استفاده می شود.
+# “SSO”
 
-در روش وب، لینک ورود را مطابق با لینک زیر در وب سایت خود قرار دهید. توجه داشته باشید که client_id را می توانید در پنل کسب و کار خود پیدا کنید و آدرس بازگشت (redirect_uri) را نیز باید در این پل ثبت کنید و دقیقا همان آدرس را در این قسمت وارد کنید.
+## نصب پکیج pod-sso-service
 
-برای اطلاعات بیشتر به لینک http://docs.pod.land/v1.0.8.0/Developer/User/149/SSO مراجعه کنید.
+پکیج ارائه شده برای  سامانه ورود یکپارچه، pod-sso-service، از طریق دستور زیر قابل نصب می باشد.
 
-\**طریقه نصب :**
+    composer require pod-sdk/pod-sso-service
 
-از طریق Package Manager Console و دستورزیر پکیج مربوطه را نصب نمایید.برای دریافت آخرین نسخه پکیج لینک https://www.nuget.org/packages/Pod_SSO چک نمایید.
+این پکیج شامل تمام api های لازم برای احرازهویت از طریق وب و از طریق دستگاه (با استفاده از رمز یکبار مصرف) می باشد 
 
-     Install-Package Pod_SSO -Version 1.0.1
+متدهای ارائه شده  شامل موارد زیر می باشند : 
 
-<div class="box-end">
-</div>
+وب : 
 
-# "OTP":
+1.  "getAccessToken"
+2. " refreshAccessToken"
+3.  "getTokenInfo"
+4.  "revokeToken"
 
-## فراخوانی متدها
+"OTP":  
 
-برای فراخونی هریک از متدها, باید یک شی از کلاس SsoService با ورودی شی از ClientInfo ایجاد کنید.
+1. " handshake"
+2.  "SignatureAuthorize"
+3. " getOtpScenario"
+4.  "verifyOTP"
+5.  "getAccessTokenByOtp"
+6.  "getAccessTokenByOtpScenario"
 
-ضروری است ClientId و ClientSecret در کلاس ClientInfo مقداردهی شود.
+در ادامه نمونه کدهایی برای استفاده از هر کدام از متدهای ذکر شده ارائه شده است.
 
-برای استفاده از هر سرویس باید کلاس ورودی مربوط به آن سرویس مقداردهی کنید و ازبا استفاده از کلاس SsoService و شی ایجاد شده بعنوان ورودی سرویس مورد نظر,سرویس را اجرا کنید.
+این سامانه بر اساس استاندارد OAuth2.0 پیاده سازی شده است، بنابراین جهت استفاده از سرویس های پلتفرم بایستی بر اساس این استاندارد جهت ورود کاربران و دریافت توکن استفاده کنیم. روش کلی به این صورت است که برای ورود کاربر، وی را به صفحه ورود سرور SSO راهنمایی میکنیم و پس از ورود کاربر، کد مربوط به کاربر به آدرس تعریف شده توسط کسب و کار ارسال می گردد. سپس با ارسال کد دریافت شده به سرور sso توکن دسترسی کاربر در یافت می شود پس از دریافت توکن، میتوان از آن برای صدازدن سایر سرویس های پلتفرم استفاده نمود و یا اطلاعات پروفایل کاربر را دریافت و ویرایش نمود. 
 
-    var clientInfo = new ClientInfo()
-    {
-        ClientId = clientId,
-        ClientSecret = clientSecret
-    };
-    var ssoService=new SsoService(ClientInfo);
+راهنمای چگونگی دریافت کد در لینک زیر آورده شده است.
 
-<div class="box-end">
-</div>
+توجه : این کد در مدت کوتاهی منقضی میشود. بنابرین بلافاصله باید نسبت به دریافت access_token و refresh_token اقدام شود.
 
-## فراخوانی سرویس Handshake
+راهنمای دریافت کد
 
-سرویس handshake به منظور معرفی دستگاه و هم‌چنین تفاهم بر روی پارامترهای امضای دیجیتال(شامل algorithm،keyId) فراخوانی می‌شود.برای فراخوانی این سرویس نیاز به api_token و client_id می‌باشد که از پنل مدیریت کسب و کار قابل دریافت است.هم‌چنین لازم است قبل از فراخوانی، کلید عمومی کسب و کار به سیستم معرفی شده باشد.
+ار آنجایی که در تمام متدهای احراز هویت نیاز به ارسال اطلاعات client_id و client_secret می باشد از کلاس ClientInfo برای تنظیم این مقادیر استفاده شده است که به عنوان پارامتر ورودی به کلاس SSOService ارسال می شود. 
 
-برای فراخوانی این سرویس  از تابع Handshake استفاده نمایید و پارامترهای ClientInfo و ApiToken و DeviceUid را مقداردهی نمایید.
+در زیر نمونه کد برای این تنظیمات آورده شده است:
 
-+ پارامتر DeviceUid  توسط سرور کسب و کار تولید می‌شود و باید یک شناسه ی منحصر به فرد باشد.
+    # required classes
+    use Pod\Base\Service\Exception\PodException;
+    use Pod\Base\Service\Exception\ValidationException;
+    use Pod\Sso\Service\SSOService;
+    use Pod\Base\Service\ClientInfo;
 
-+ پارامتر ClientInfo یک آبجکت از کلاس ClientInfo باید باشد که در این سرویس مقدار ClientInfo.ClientId ضروری است و باید حتما مقداردهی شود.
+    const CLIENT_ID = 'YOUR_CLIENT_ID';
+    const CLIENT_SECRET = 'YOUR_CLIENT_SECRET';
+    const REDIRECT_URI = 'YOUR_REDIRECT_URI';
+    const API_TOKEN = 'YOUR_API_TOKEN';
 
-```
-    var output = new HandshakeSrv();
-    var handshakeVo = HandshakeVo.ConcreteBuilder
-                        .SetAuthorization({Put your ApitToken})
-                        .SetDeviceUid({Put your DeviceUid})
-                        //.SetDeviceLat({Put your DeviceLat})
-                        //.SetDeviceLon({Put your DeviceLon})
-                        //.SetDeviceName("{Put your DeviceName}")
-                        //.SetDeviceOs("{Put your DeviceOs}")
-                        //.SetDeviceOsVersion("{Put your DeviceOsVersion}")
-                        //.SetDeviceType(DeviceType.MobilePhone) //{Put your DeviceType}
-                        .Build();
-    ssoService.Handshake(handshakeVo, response => Listener.GetResult(response, out output));
-```
+    $clientInfo = new ClientInfo();
+    $clientInfo->setClientId(CLIENT_ID);
+    $clientInfo->setClientSecret(CLIENT_SECRET);
 
-<div class="box-end">
-</div>
+    // for get Access Token and Refresh Access Token you need set redirect uri
+    $clientInfo->setRedirectUri(REDIRECT_URI);
 
-## درخواست دریافت کد OTP
+    #  instantiates a SSOService
+    $SSOService = new SSOService($clientInfo);
 
- پس از صدا زدن این سرویس ، کد (رمز یکبار مصرف) به تلفن و یا ایمیل داده شده  ارسال می گردد. توجه داشته باشید رمز ارسال شده پس از 300 ثانیه منقضی می گردد.
-
-- پارامتر state اختیاری می باشد و در نمونه کد زیر کامنت شده است. در صورت ارسال، در پاسخ سرویس Verify آن را دریافت خواهید کرد.
-
-- برای فراخوانی این سرویس از تابع Authorize استفاده نمایید و پارامترهای identity , keyId ,privateKey  را حتما مقداردهی نمایید. 
-
--  پارامتر Identity می تواند حاوی شماره تلفن و یا ایمیل کاربر باشد.
-
-- مقدار پارامتر  ResponseType  باید حتما "code" باشد.
-
-```
-    var output = new SentVerificationDTOSrv();
-    var authorizeVo = AuthorizeVo.ConcreteBuilder
-                        .SetIdentity(identity)
-                        .SetAuthorization(keyId, privateKey)
-                        .SetResponseType("code")
-                        //.SetCallbackUri("{Put your CallbackUri}")
-                        //.SetClientId("{Put your ClientId}")
-                        //.SetCodeChallenge("{Put your CodeChallenge}")
-                        //.SetCodeChallengeMethod("{Put your CodeChallengeMethod}")
-                        //.SetIdentityType("{Put your IdentityType}")
-                        //.SetLoginAsUserId("{Put your LoginAsUserId}")
-                        //.SetRedirectUri("{Put your RedirectUri}")
-                        //.SetReferrer("{Put your Referrer}")
-                        //.SetReferrerType({Put your ReferrerType})
-                        //.SetResponseType("{Put your ResponseType}")
-                        .Build();
-    ssoService.Authorize(authorizeVo, response => Listener.GetResult(response, out output));
-```
+راهنمای ورودی ها و هدر برای دریافت توکن دسترسی کاربر
 
 <div class="box-end">
 </div>
 
-## تایید OTP
-
-تایید otp به به صورت کد زیر است که در صورت ورود کد تایید درست و یا نادرست پیغام ورود موفق و ناموفق روی identity ارسالی دریافت خواهید نمود.
-
-- پارامتر Identity می تواند حاوی شماره تلفن و یا ایمیل کاربر باشد.
-
-```
-    var output = new OAuthResponseSrv();
-    var verifyVo = VerifyVo.ConcreteBuilder
-                        .SetIdentity({Put your Identity})
-                        .SetAuthorization({Put your KeyId}, {Put your PrivateKey})
-                        .SetOtp({Put your Otp})
-                        .Build();
-    ssoService.Verify(verifyVo, response => Listener.GetResult(response, out output));
-```
-
-<div class="box-end">
-</div>
 
 ## دریافت توکن دسترسی کاربر
 
-برای دریافت توکن دسترسی از تابع  GetAccessTokenByOtp  استفاده نمایید.مقدار پارامتر GrantType  باید حتما "authorization_code"  باشد.
+پس از دریافت کد برای دریافت توکن دسترسی کاربربا استفاده از نمونه کد زیر و با پر کردن پارامترهای ورودی می توانید توکن دسترسی کاربر را دریافت نمایید.
 
-پاسخ سرویس حاوی refresh_token، access_token و id_token می باشد که اعتبار access_token به مدت 15 دقیقه می باشد.
+       $params = [
+          "code" => "put code here" # use code that you receive in url
+       ];
 
-"Id_token" یک توکن self_encoded می باشد که فقط جهت شناسایی کاربر در مواقعی که بین چندین دستگاه جابجا می‌شود، استفاده می‌شود و برای دسترسی به api سرویس ها غیرقابل استفاده می باشد.
-
-"access_token " را به اپلیکیشن ارسال نمایید و توجه نمایید که refresh_token را سمت سرور نگه داری کرده و به اپلیکیشن ارسال ننمایید. ازrefresh_token  برای دریافت توکن جدید استفاده نمایید.
-
-    var output = new OAuthResponseSrv();
-    var accessTokenByOtpVo = AccessTokenByOtpVo.ConcreteBuilder
-                        .SetCode({Put your Code})
-                        .SetGrantType("authorization_code")
-                        .Build();
-    ssoService.GetAccessTokenByOtp(accessTokenByOtpVo, response => Listener.GetResult(response, out output));
-<div class="box-end">
-</div>
-
-# "SSO"
-
-## دریافت توکن دسترسی کاربر
-
-برای دریافت توکن دسترسی از تابع  GetAccessToken استفاده نمایید.مقدار پارامتر  GrantType  باید حتما "authorization_code"  باشد.
-
-مقدار RedirectUri  باید دقیقا مطابق با Uri ای که در پنل کسب و کار خورد تعریف کرده ای برابر باشد.
-
-    var output = new OAuthResponseSrv();
-    var accessTokenVo = AccessTokenVo.ConcreteBuilder
-                        .SetCode({Put your Code})
-                        .SetGrantType("authorization_code")
-                        .SetRedirectUri({Put your RedirectUri})
-                        .Build();
-    ssoService.GetAccessToken(accessTokenVo, response => Listener.GetResult(response, out output));
+       try {
+            $result = $SSOService->getAccessToken($params);
+            print_r($result);
+        } catch (ValidationException $e) {
+            print_r($e->getResult());
+            print_r($e->getErrorsAsArray());
+        } catch (PodException $e) {
+            print_r($e->getResult());
+        }
 
 <div class="box-end">
 </div>
 
-## به روز رسانی توکن دسترسی کاربر
 
-از آنجایی که توکن کاربر هر 900 ثانیه منقضی میشود باید این توکن را با استفاده از refresh_token  بروزرسانی کرد و access_token جدید دریافت کرد.
+## بروزرسانی توکن دسترسی کاربر
 
-برای این کار از تابع RefreshAccessToken استفاده می کنیم و کلاس RefreshTokenVo  را مقداردهی می کنیم.
+پس از گذشت زمان expires_in ، توکن دسترسی کاربر منقضی می شود. با استفاده از refresh_token و تابع زیر، توکن معتبر جدید درخواست دهید.
 
-    var output = new OAuthResponseSrv();
-    var refreshTokenVo = RefreshAccessTokenVo.ConcreteBuilder
-                        .SetGrantType("refresh_token")
-                        .SetRefreshToken({Put your RefreshToken})
-                        .Build();
-    ssoService.RefreshAccessToken(refreshTokenVo, response => Listener.GetResult(response, out output));
+     $params = [
+            "refresh_token" => "put refresh token"
+        ];
 
-<div class="box-end">
-</div>
-
-## دریافت اطلاعات توکن
-
-می توان اطلاعات توکن را از جمله فعال یا غیرفعال بودن آن , از طریق تابع GetTokenInfo و  مقداردهی کلاس TokenInfoVo , دریافت کرد.
-
-فقط ضروری است پارامتر  TokenTypeHint با توجه به توکن مربوطه یکی از دو مقدار زیر باشد:
-
-"TokenType.access_token"
-,or
-"TokenType.refresh_token"
-,or
-"TokenType.id_token"
-
-    var output = new TokenInfoSrv();
-    var tokenInfoVo = TokenInfoVo.ConcreteBuilder
-                        .SetToken({Put your Token})
-                        .SetTokenTypeHint({Put your TokenTypeHint})
-                        .Build();
-    ssoService.GetTokenInfo(tokenInfoVo, response => Listener.GetResult(response, out output));
+        try {
+            $result = $SSOService->refreshAccessToken($params);
+            print_r($result);
+        } catch (ValidationException $e) {
+            print_r($e->getResult());
+            print_r($e->getErrorsAsArray());
+        } catch (PodException $e) {
+            print_r($e->getResult());
+        }
 
 <div class="box-end">
 </div>
 
-## ابطال  توکن
 
-می توان توکن را از طریق تابع RevokeToken و مقداردهی کلاس RevokeTokenVo  ابطال کرد.
+## ابطال توکن
 
-فقط ضروری است پارامتر  TokenTypeHint با توجه به توکن مربوطه یکی از دو مقدار زیر باشد:
+ممکن است به هر دلیلی بخواهید دسترسی برنامه به اطلاعات حساب کاربر را از بین ببرید. برای این کار می توانید از ابطال توکن استفاده کنید.
 
-"RevokeTokenType.access_token"
-,or
-"RevokeTokenType.refresh_token"
+    # set token and token_type_hint
+        $params = [
+            "token" => API_TOKEN,
+            "token_type_hint" => "put token type to `refresh_token` or `access_token`",
+        ];
 
-    var output = string.Empty;
-    var revokeTokenVo = RevokeTokenVo.ConcreteBuilder
-                        .SetTokenTypeHint({Put your TokenTypeHint})
-                        .SetToken({Put your Token})
-                        .Build();
-    ssoService.RevokeToken(revokeTokenVo, response => Listener.GetResult(response, out output));
+        try {
+            $result = $SSOService->revokeToken($params);
+            print_r($result);
+        } catch (ValidationException $e) {
+            print_r($e->getResult());
+            print_r($e->getErrorsAsArray());
+        } catch (PodException $e) {
+            print_r($e->getResult());
+        }
+
+<div class="box-end">
+</div>
+
+## دریافت اطلاعات توکن 
+
+برای این که از صحت و اعتبار توکن کاربر خود مطلع شوید می توانید اطلاعات توکن مورد نظر را دریافت کنید.
+
+    # set token and token_type_hint
+        $params = [
+            "token" => API_TOKEN,
+            "token_type_hint" => "put token type to `refresh_token` or `access_token`",
+        ];
+
+        try {
+            $result = $SSOService->getTokenInfo($params);
+            print_r($result);
+        } catch (ValidationException $e) {
+            print_r($e->getResult());
+            print_r($e->getErrorsAsArray());
+        } catch (PodException $e) {
+            print_r($e->getResult());
+        }
+
+
+<div class="box-end">
+</div>
+
+
+# "OTP"
+
+
+## ورود با OTP با سرور
+
+جهت ایجاد امکان ورود با رمز یکبار مصرف (OTP) برای کاربران، در حالتی که کسب و کار دارای سرور امن و قابلیت ایجاد ارتباط با SSO پاد از طریق سرور خود باشد، این روش پیشنهاد می گردد.
+
+لازم است از طریق سرور، به ازای هر شماره موبایل یا دستگاهی که میخواهد لاگین شود، اطلاعات دستگاه را با متد handshake به SSO معرفی نمایید و keyId دریافت کنید.
+
+http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
+
+<div class="box-end">
+</div>
+
+## فراخوانی سرویس Handshake سمت SSO
+
+سرویس handshake به منظور معرفی دستگاه و هم‌چنین تفاهم بر روی پارامترهای امضای دیجیتال(شامل algorithm،keyId) فراخوانی می‌شود.برای فراخوانی این سرویس علاوه بر api_token و client_id که از پنل مدیریت کسب و کار قابل دریافت است، لازم است کلید عمومی کسب و کار به سیستم معرفی شده باشد.
+
+     $params = [
+        ## =========================================== *Required Parameters ============================================
+        "api_token"             => API_TOKEN,
+        "device_uid"            => 'put device unique id here',         # Device unique id ,maximum 255 character
+        ## =========================================== *Optional Parameters ============================================
+        "device_name"           => 'put device name here',
+        "device_type"           => 'put device type here',
+        "device_lat"            => 'put device latitude here',
+        "device_lon"            => 'put device longitude here',
+        "device_os"             => 'put device os here',
+        "device_os_version"     => 'put device os version here',
+
+    ];
+    try {
+        $result = $SSOService->handshake($params);
+        print_r($result);
+    } catch (ValidationException $e) {
+        print_r($e->getResult());
+        print_r($e->getErrorsAsArray());
+    } catch (PodException $e) {
+        print_r($e->getResult());
+    }
+
+ <div class="box-end">
+</div>
+
+## درخواست دریافت کد OTP**:
+
+ پس از دریافت  key_id از مرحله قبل و با استفاده از کلید خصوصی (private_key)  از متد زیر برای ساخت امضای دیجیتال و ارسال آن و همچنین دریافت کد OTP اقدام کنید. کد مورد نظر بر اساس مقدار فیلد identity  که می فرستید به کاربر مورد نظر از طریق پیامک یا ایمیل فرستاده می شود.
+
+      $privateKey = file_get_contents('put your private key file name');
+        $params = [
+            ## =========================================== *Required Parameters ============================================
+            "privateKey"                => $privateKey,
+            "keyId"                     => 'put key id that you receive from handshake here',
+    //          "algorithm"                 => OPENSSL_ALGO_SHA256,
+            "identity"                  => 'put identity [mobile phone number or email address] here',
+            "response_type"             => 'code', # code | token | id_token
+            ## =========================================== *Optional Parameters ============================================
+            "identityType"              => 'put PHONE  identity type [PHONE | EMAIL]',
+            "loginAsUserId"             => 'put loginAsUserId',
+            "state"                     => 'put state',
+            "client_id"                 => 'put client_id',
+            "redirect_uri"              => 'put redirect_uri',
+            "callback_uri"              => 'put callback_uri',
+            "scope"                     => 'put scope',
+            "code_challenge"            => 'put code_challenge',
+            "code_challenge_method"     => 'put code_challenge_method',
+            "referrer"                  => 'put referrer',
+            "referrerType"              => 'put referrerType',
+    
+        ];
+        try {
+            $result = $SSOService->signatureAuthorize($params);
+            print_r($result);
+        } catch (ValidationException $e) {
+            print_r($e->getResult());
+            print_r($e->getErrorsAsArray());
+        } catch (PodException $e) {
+            print_r($e->getResult());
+        }
+
+<div class="box-end">
+</div>
+
+## تایید کد OTP
+پس از دریافت otp  کاربر باید آن را ارسال کند. از طریق کد زیر و با استفاده امضای دیجیتالی که در متد signatureAuthorize دریافت می کنید  برای تایید کد otp ارسالی از کاربر استفاده کنید :
+
+      $params = [
+            ## =========================================== *Required Parameters ============================================
+            "keyId"                     => 'put key id that you received from handshake here',
+            "signature"                 =>   $signature,
+            "otp"                       => 'put otp that is received from user here',
+            "identity"                  => 'put identity [phone or email] here',
+        ];
+    
+        try {
+            $result = $SSOService->verifyOTP($params);
+            print_r($result);
+        } catch (ValidationException $e) {
+            print_r($e->getResult());
+            print_r($e->getErrorsAsArray());
+        } catch (PodException $e) {
+            print_r($e->getResult());
+        }
+
+<div class="box-end">
+</div>
+
+## دریافت توکن از سرور SSO
+
+با استفاده از کد دریافتی از متد verifyOTP و ارسال آن از طریق متد getAccessTokenByOTP توکن دسترسی را از سرور SSO دریافت کنید: 
+
+       $params = [
+            "code" => "put code", # use code that you received after verify otp
+        ];
+    
+        try {
+            $result = $SSOService->getAccessTokenByOTP($params);
+            print_r($result);
+        } catch (ValidationException $e) {
+            print_r($e->getResult());
+            print_r($e->getErrorsAsArray());
+        } catch (PodException $e) {
+            print_r($e->getResult());
+        }
+        
 
 <div class="box-end">
 </div>
