--- a/Banking/درگاه پرداخت.md
+++ b/Banking/درگاه پرداخت.md
@@ -1,7 +1,6 @@
-# پرداخت اینترنتی
+# درگاه پرداخت
  اگر قصد دارید سرویس‌هایی مانند راه‌اندازی درگاه پرداخت انواع قبض موبایل و تلفن، خرید انواع بلیط سفر و هتل، خرید بلیط قطار، خرید و سفارش انواع بیمه، شارژ و ... را در برنامه‌ی خود پیاده‌سازی کنید می‌توانید به راحتی از این سرویس‌ها در برنامه‌ی خود استفاده کنید.
 
-## درگاه پرداخت
  برای انتقال کاربر به درگاه پرداخت اینترنتی، ابتدا باید مقدار keyid را از طریق سرویس زیر دریافت نمایید.
 نحوه ارسال توکن: بعد از Bearer یک فاصله و سپس مقدار توکن ( _api_token_ موجود در پنل مدیریت کسب و کار) را قرار دهید.
 
