Update and rename 06 - محصولات.md to 06 - کاتالوگ محصولات.md

--- a/Charity/06 - کاتالوگ محصولات.md
+++ b/Charity/06 - کاتالوگ محصولات.md
@@ -1,4 +1,4 @@
-# محصولات
+# کاتالوگ محصولات
 
 با استفاده از این سرویس می‌توانید در راستای افزایش جذب کمک‌های مردمی قدم برداشته و خدمات و محصولاتتان را به نفع موسسه‌ی خیریه، به فروش و یا اجاره بگذارید.
 
