--- a/Charity/07 - فضای اشتراک فایل.md
+++ b/Charity/07 - فضای اشتراک فایل.md
@@ -1,6 +1,6 @@
 
 # فضای اشتراک فایل
-با استفاده از این سرویس شما می‌توانید با اطمینان خاطر تمامی اطلاعات مرتبط با مددجویان و خیّرین، کمک‌های مردمی، عکس‌ها و فیلم‌های مرتبط با گزارش فعالیت‌های مختلف و ... را در یک حافظه‌ی ابری ذخیره‌سازی کنید. علاوه بر این می‌توانید برای افراد مختلف سازمانتان دسترسی‌های خاص تنظیم کنید و نحوه‌ی دسترسی آن‌ها به اطلاعات را تحت کنترل قرار دهید.
+با استفاده از سرویس "پاد اسپیس" شما می‌توانید با اطمینان خاطر تمامی اطلاعات مرتبط با مددجویان و خیّرین، کمک‌های مردمی، عکس‌ها و فیلم‌های مرتبط با گزارش فعالیت‌های مختلف و ... را در یک حافظه‌ی ابری ذخیره‌سازی کنید. علاوه بر این می‌توانید برای افراد مختلف سازمانتان دسترسی‌های خاص تنظیم کنید و نحوه‌ی دسترسی آن‌ها به اطلاعات را تحت کنترل قرار دهید.
 
 <div class="box-end">
 </div>
