Update 04 - کیف پول.md

--- a/Entertainment/04 - کیف پول.md
+++ b/Entertainment/04 - کیف پول.md
@@ -1,6 +1,8 @@
 # کیف پول
-روش‌های مختلفی برای پرداخت وجود دارد که یکی از آن‌ها پرداخت از طریق کیف‌ پول است. 
-با پیاده‌سازی سیستم کیف‌پول، در واقع شما در حساب کاربری افراد یک حساب بانکی مجازی ایجاد می‌کنید. هر یک از کاربران می‌توانند حساب مجازی خود را با هر مبلغی که بخواهند شارژ نمایند. پس از آن نیازی نیست کاربران برای پرداخت هزینه‌های خود اطلاعات کارت بانکی‌شان را وارد نمایند بلکه تنها با زدن دکمه‌ی پرداخت از طریق کیف پول، در کم‌ترین زمان ممکن و بسیار راحت هزینه‌های مربوطه را پرداخت خواهد کرد. توجه داشته باشید که استفاده از کیف پول پاد در کسب‌وکارهایی که می‌خواهند از سرویس‌های پاد استفاده کنند یکی از شروط اصلی است.
+
+روش‌های مختلفی برای پرداخت وجود دارد که یکی از آن‌ها از پرداخت از طریق کیف‌ پول است. 
+با پیاده‌سازی سیستم کیف‌پول، در واقع شما در حساب کاربری افراد یک حساب بانکی مجازی ایجاد می‌کنید. هر یک از کاربران می‌توانند حساب مجازی خود را با هر مبلغی که بخواهند شارژ نمایند. پس از آن نیازی نیست کاربران برای پرداخت هزینه‌های خود اطلاعات کارت بانکی‌شان را وارد نمایند بلکه تنها با زدن دکمه‌ی پرداخت از طریق کیف پول، در کم‌ترین زمان ممکن و بسیار راحت هزینه‌های مربوطه را پرداخت خواهد کرد. 
+اگر سرویس برداشت مستقیم از حساب را در برنامه‌ی خود پیاده‌سازی نمایید، کاربر نهایی با استفاده از این کیف‌پول می‌تواند مشترک برنامه‌ی شما شده و اجازه برداشت مستقیم از حساب خود در زمان‌های مشخص و مبالغ معیّن را بدهد. توجه داشته باشید که استفاده از کیف پول پاد در کسب‌وکارهایی که می‌خواهند از سرویس‌های پاد استفاده کنند یکی از شروط اصلی است.
 
  <div class="box-end">
 </div>
