Update and rename مدیریت چک.md to عملیات چک بانکی.md

--- a/Banking/عملیات چک بانکی.md
+++ b/Banking/عملیات چک بانکی.md
@@ -1,4 +1,4 @@
-# مدیریت چک
+# عملیات چک بانکی
 با استفاده از این سرویس شما می‌توانید گزارش‌های کامل و دقیقی در مورد روند اقساط و همچنین چک‌های واگذار شده‌ی کاربران در اختیار آن‌ها قرار دهید.
 
 ##  استعلام چک های واگذار شده
