Update and rename کارت بانکی.md to عملیات کارت بانکی.md

--- a/Banking/عملیات کارت بانکی.md
+++ b/Banking/عملیات کارت بانکی.md
@@ -1,5 +1,5 @@
 
-# کارت بانکی
+# عملیات کارت بانکی
 
 اشخاص و کسب‌و‌کارها برای انجام کارهای روتین و روزمره‌ی خود با استفاده از این سرویس امکان مشاهده فهرست کارت‌های مربوط به هر شخص، دریافت اطلاعات کارت‌های شتابی، بازیابی شماره‌ی سپرده بر‌ اساس شماره‌ی کارت پاسارگادی و بازیابی شماره‌ی شبا براساس شماره کارت را دارند.
 
