Update and rename 01 - محصولات.md to 01 - کاتالوگ محصولات.md

--- a/Entertainment/01 - کاتالوگ محصولات.md
+++ b/Entertainment/01 - کاتالوگ محصولات.md
@@ -1,4 +1,4 @@
-﻿# محصولات
+﻿# کاتالوگ محصولات
 
  اگر محصولات و خدمات شما شامل بازی و یا... می‌باشد، ممکن است درون بازی و با توجه به شرایط بازی لازم باشد بازیکن، سرویس یا محصول اینترنتی را از شما خریداری کند و پرداخت درون برنامه‌ای داشته باشد. با استفاده از این سرویس به راحتی می‌توانید خدمات و محصولات خود را مدیریت کنید.
 
