--- a/Banking/مقدمه‌ی بانکی و مالی .md
+++ b/Banking/مقدمه‌ی بانکی و مالی .md
@@ -1,5 +1,4 @@
-# سرویس‌های بانکی و مالی
-
+# مقدمه
 اگر به دنبال پیاده‌سازی انواع سرویس‌های بانکی در کسب‌و‌کارتان هستید و یا قصد دارید یک برنامه‌ی ارائه‌دهنده‌ی سرویس‌های بانکی ارائه دهید، ما این امکان را در اختیارتان قرار می‌دهیم تا از خدمات متنوع بانکی، به صورت کاملا امن در برنامه‌ی خود استفاده نمایید و آن‌ها را مطابق با نیازهایتان تغییر دهید. 
 
 <div class="box-end">
