Update 00 - احراز هویت - C#.md

--- a/Entertainment/احراز هویت/00 - احراز هویت - C#.md
+++ b/Entertainment/احراز هویت/00 - احراز هویت - C#.md
@@ -98,7 +98,8 @@
 
 <div class="box-end">
 </div>
-تایید OTP
+
+## تایید OTP
 
 تایید otp به به صورت کد زیر است که در صورت ورود کد تایید درست و یا نادرست پیغام ورود موفق و ناموفق روی identity ارسالی دریافت خواهید نمود.
 
@@ -132,6 +133,7 @@
                         .SetGrantType("authorization_code")
                         .Build();
     ssoService.GetAccessTokenByOtp(accessTokenByOtpVo, response => Listener.GetResult(response, out output));
+    
 <div class="box-end">
 </div>
 
