--- a/Tourism/01 - شبکه‌ی اجتماعی.md
+++ b/Tourism/01 - شبکه‌ی اجتماعی.md
@@ -104,7 +104,7 @@ Parameters:
 
 ## ارسال پست دسته ای 
 
-   توسط این سرویس قادر خواهید بود تعداد نامحدود پست سفارشی را در یک درخواست ارسال نمایید.
+توسط این سرویس قادر خواهید بود تعداد نامحدود پست سفارشی را در یک درخواست ارسال نمایید.
 
 ```
 HEADER:
@@ -118,8 +118,7 @@ Parameters:
 
 ```
 
-
-   جهت ارسال مقادیر مورد نظر در پارامتر Data سرویس فوق باید به فرمتی که در بخش زیر توضیح داده شده است مقادیر را ارسال کنید.
+جهت ارسال مقادیر مورد نظر در پارامتر Data سرویس فوق باید به فرمتی که در بخش زیر توضیح داده شده است مقادیر را ارسال کنید.
 
 ```
 [{
@@ -220,13 +219,9 @@ Parameters:
 
 ## کامنت برای محتوا 
 
-```
-   مشتریان شما می توانند برای محتواهایی که شما مجاز نموده اید، کامنت بگذارند. برای این منظور api زیر را با توکن کاربر استفاده 
 
-```
+مشتریان شما می توانند برای محتواهایی که شما مجاز نموده اید، کامنت بگذارند. برای این منظور api زیر را با توکن کاربر استفاده نمایید.
 
-
-نمایید.
 
 ```
 HEADER
@@ -421,7 +416,7 @@ Parameters:
 
 ```
 
-​     <div class="box-end">
+<div class="box-end">
 </div>   
 
 ## دریافت تایم لاین
