--- a/Tourism/06 - تسهیم فروش.md
+++ b/Tourism/06 - تسهیم فروش.md
@@ -1,4 +1,4 @@
-# فاکتور تسهیمی
+# تسهیم فروش
 با استفاده از این سرویس شما می‌توانید نوعی فاکتور با قوانین تسهیم فروش صادر نمایید و سهم مربوط به اشخاص و یا کسب‌وکارهایی که با آن‌ها مراوده‌ی مالی دارید را مشخص نمایید. پس از پرداخت فاکتور توسط کاربر، مبا‌لغ مستقیما به صورت جداگانه به حساب هر یک از شما واریز می‌شود.
 
 <div class="box-end">
