--- a/Transportation/07 - اعلان.md
+++ b/Transportation/07 - اعلان.md
@@ -255,7 +255,7 @@ podNotify.off(“message”, id);// returns Boolean, true if successfully remove
  <div class="box-end">
 </div>
 
-## ,Event Listeners
+## Event Listeners
 
 **متد on:**
 
