Update تسهیم فروش - سرگرمی.md

--- a/Entertainment/تسهیم فروش - سرگرمی.md
+++ b/Entertainment/تسهیم فروش - سرگرمی.md
@@ -1,4 +1,5 @@
 
+
 # تسهیم فروش
 
 این نوع فاکتور برای زمانی مناسب است که شما بخواهید محصولات یا خدمات سایر کسب وکارها را به فروش برسانید و یا در بازی‌ها بخواهید برای طراح، برنامه‌نویس، تولید‌کننده‌ی محتوا و ... سهم‌های جداگانه در نظر بگیرید. در این شرایط می‌توانید نوعی فاکتور با قوانین تسهیم فروش صادر نمایید. ظاهراً خریدار تغییری را احساس نخواهد کرد و یک فاکتور تجمیعی را پرداخت می‌­کند. ولی در عمل، به تعداد ذینفعان با مبلغ تسهیمی، فاکتور صادر شده و مبا‌لغ مستقیماً پس از پرداخت به حساب آن‌­ها منتقل می‌شود.
@@ -11,7 +12,7 @@
 ## اجازه ثبت فاکتور
 در صورتی که بخشی از فروش شما به کسب و کار دیگری تعلق دارد و میخواهید فاکتور به نام همان کسب و کار ثبت شود، لازم است آن کسب و کار به کسب و کار شما اجازه صدور فاکتور به عنوان معامله گر را داده باشد. برای این منظور خود کسب و کار ذینفع یا کارگزار او، با استفاده از توکن که در اختیار دارد، با استفاده از سرویس زیر به کسب کار دیگر اجازه صدور فاکتور می دهد.
 
-```
+```C#
 var output = new ResultSrv<BusinessDealerSrv>();
 var addDealerVo = AddDealerVo.ConcreteBuilder
                     .SetDealerBizId({Put your DealerBizId})
@@ -22,16 +23,11 @@ billingService.AddDealer(addDealerVo, response => Listener.GetResult(response, o
 ```
 
 
-
-
-<div class="box-end">
-</div>
-
 ## دریافت لیست کسب و کارها
 برای دریافت یا جستجوی لیست تمام کسب و کارهایی که به آنها مجوز معامله و صدور فاکتور داده اید، از سرویس زیر استفاده نمایید.
 توجه داشته باشید در صورتی که شناسه کسب و کار را اشتباه وارد کنید، با اررور "شناسه کسب و کار یافت نشد" مواجه نخواهید شد بلکه در فایل خروجی هیچ مقداری دریافت نخواهید کرد.
 (با hasError": false")
-```
+```C#
 var output = new ResultSrv<List<BusinessDealerSrv>>();
 var dealerListVo = DealerListVo.ConcreteBuilder
                     //.SetDealerBizId(0)
@@ -44,14 +40,10 @@ billingService.DealerList(dealerListVo, response => Listener.GetResult(response,
 
 
 
-
-<div class="box-end">
-</div>
-
 ## فعالسازی مجوز معامله گران
 برای فعالسازی مجوز معامله گران، به ترتیب از سرویس  زیر استفاده نمایید.
 
-```
+```C#
 var output = new ResultSrv<BusinessDealerSrv>();
  var enableDealerVo = EnableDealerVo.ConcreteBuilder
                     .SetDealerBizId({Put your DealerBizId})
@@ -59,15 +51,11 @@ var output = new ResultSrv<BusinessDealerSrv>();
 billingService.EnableDealer(enableDealerVo, response => Listener.GetResult(response, out output));
 
 ```
-
-
-<div class="box-end">
-</div>
 
 ## فعالسازی مجوز معامله گران
 برای غیر فعالسازی مجوز معامله گران، از سرویس  زیر استفاده نمایید.
 
-```
+```C#
 var output = new ResultSrv<BusinessDealerSrv>();
  var enableDealerVo = EnableDealerVo.ConcreteBuilder
                     .SetDealerBizId({Put your DealerBizId})
@@ -75,13 +63,12 @@ var output = new ResultSrv<BusinessDealerSrv>();
 billingService.EnableDealer(enableDealerVo, response => Listener.GetResult(response, out output));
 ```
 
-<div class="box-end">
-</div>
+
 
 ## لیست کسب و کارهایی که واسط آن هستید
 با فراخوانی سرویس زیر می توانید لیست کسب و کارهایی که واسط آن ها شده اید را دریافت نمایید.
 
-```
+```C#
 var output = new ResultSrv<List<BusinessDealerSrv>>();
 var businessDealingListVo = BusinessDealingListVo.ConcreteBuilder
                     .SetDealerBizId({Put your DealerBizId})
@@ -94,16 +81,13 @@ billingService.BusinessDealingList(businessDealingListVo,response => Listener.Ge
 ```
 
 
-<div class="box-end">
-</div>
-
 ## صدور فاکتور تسهیمی
 
 این نوع فاکتور برای زمانی مناسب است که شما بخواهید محصولات یا خدمات سایر کسب و کارها را به فروش برسانید و یا در بازی‌ها بخواهید برای طراح، برنامه‌نویس، تولید‌کننده‌ی محتوا و ... سهم‌های جداگانه در نظر بگیرید. در این شرایط می‌توانید نوعی فاکتور با قوانین تسهیم فروش صادر نمایید. ظاهراً خریدار تغییری را احساس نخواهد کرد و یک فاکتور تجمیعی را پرداخت می‌­کند. ولی در عمل، به تعداد ذینفعان با مبلغ تسهیمی، فاکتور صادر شده و مبا‌لغ مستقیماً پس از پرداخت به حساب آن‌­ها منتقل می‌شود.
 
 کسب و کار معامله گر که لازم است فاکتور تسهیمی صادر نماید باید از جانب کسب و کارهای سهیم دارای مجوز صدور فاکتور باشد. سپس می‌تواند با استفاده از سرویس زیر تسهیم فروش انجام دهد.
 
-```
+```C#
 var output = new ResultSrv<InvoiceSrv>();
 var ottOutput = GetOtt();
 var mainInvoiceVos = MainInvoiceVo.ConcreteBuilder
@@ -166,14 +150,11 @@ billingService.IssueMultiInvoice(issueMultiInvoiceVo, response => Listener.GetRe
 ```
 
 
-<div class="box-end">
-</div>
-
 ## کاهش فاکتور تسهیمی
 در فاکتور تسهیمی نیز مانند فاکتور عادی با لغو شدن، کل مبلغ فاکتور و با کاهش، قسمتی از مبلغ به مشتری بازگردانده می شود. ولی در فاکتور تسهیمی برای کاهش لازم است کل سهم ها مجدداً اعلام شوند تا مبلغی که کسر می شود از حساب درست برداشته شود. برای کاهش فاکتور تسهیمی از سرویس ReduceMultiInvoice استفاده نمایید.
 مقدار id در تمام بخش های اطلاعات ارسالی باید مطابق با شناسه های فاکتور اصلی باشد، در غیر این صورت خطا رخ می دهد. در فاکتور اصلاح شده نیز شرایط زیر لازم است برقرار باشد:      
 the share of dealer + the share of shareholder =  the price to be payed by customer
-```
+```C#
  var output = new ResultSrv<InvoiceSrv>();
 var mainInvoiceVos = ReduceInvoiceItemVo.ConcreteBuilder
                     .SetId({Put your Id})
@@ -215,13 +196,10 @@ billingService.ReduceMultiInvoice(reduceMultiInvoiceVo, response => Listener.Get
 ```
 
 
-<div class="box-end">
-</div>
-
 ## کاهش فاکتور تسهیمی و انتقال به شبا
 در صورتی که می خواهید بلافاصله بعد از کاهش فاکتور، مبلغ برگشتی به شماره شبا کاربر منتقل گردد، از سرویس زیر با همان فرمت data سرویس ReduceMultiInvoice، استفاده نمایید.
 
-```
+```C#
 var output = new ResultSrv<InvoiceSrv>();
 var mainInvoiceVos = ReduceInvoiceItemVo.ConcreteBuilder
                     .SetId({Put your Id})
@@ -264,14 +242,12 @@ billingService.ReduceMultiInvoiceAndCashout(reduceMultiInvoiceAndCashoutVo, resp
 
 ```
 
-<div class="box-end">
-</div>
 
 ### مجوز فروش محصول
 همانطور که توضیح داده شد، به منظور صدور فاکتور تسهیمی (در صورت شراکت با یک کسب و کار دیگر)، فراخوانی سرویس nzh/biz/addDealer قبل از فراخوانی سرویس صدور فاکتور تسهیمی، الزامی ست. اما در صورتی که برای یک محصول خاص، بخواهید به کسب و کار دیگری مجوز صدور فاکتور عادی اعطا کنید، علاوه بر فراخوانی سرویس ذیل، باید سرویس nzh/biz/addDealer را نیز فراخوانی نمایید و سپس سرویس صدور فاکتور(nzh/issueInvoice) را  فراخوانی نمایید؛ در غیر این صورت با خطای  "کسب و کار دلال وارد شده دلال  کسب و کار مالک محصول نمی باشد" مواجه خواهید شد.
 شناسه محصول(EntityId) و شناسه کسب و کار(DealerBizId) را کافی ست در در  کلاس AddDealerProductPermissionVo مقداردهی نمایید و سپس سرویس AddDealerProductPermission فراخوانی کنید.
 
-```
+```C#
 var output = new ResultSrv<DealerProductPermissionSrv>();
 var registerUserVo = AddDealerProductPermissionVo.ConcreteBuilder
                     .SetEntityId({Put your EntityId})
@@ -281,13 +257,12 @@ billingService.AddDealerProductPermission(registerUserVo, response => Listener.G
 
 ```
 
-<div class="box-end">
-</div>
+
 
 ## دریافت لیست مجوزها
 با این سرویس می توانید لیست مجوزهای خود به کسب و کارهای واسط دیگر را به انضمام شناسه محصول، مشاهده نمایید.
 
-```
+```C#
 var output = new ResultSrv<List<DealerProductPermissionSrv>>();
 var registerUserVo = DealerProductPermissionListVo.ConcreteBuilder
                     //.SetSize({Put your Size})
@@ -301,14 +276,13 @@ billingService.DealerProductPermissionList(registerUserVo,response => Listener.G
 ```
 
 
-<div class="box-end">
-</div>
+
 
 ## لیست مجوزهای صادر شده برای کسب و کار شما
 لیست دسترسی هایی که شما واسط آن کسب و کار شده اید و برای آن محصول خاص مجوز صدور فاکتور گرفته اید را می توانید با سرویس
 زیر مشاهده نمایید.
 
-```
+```C#
 var output = new ResultSrv<List<DealerProductPermissionSrv>>();
 var registerUserVo = DealingProductPermissionListVo.ConcreteBuilder
                     //.SetSize({Put your Size})
@@ -321,14 +295,10 @@ billingService.DealingProductPermissionList(registerUserVo,response => Listener.
 
 ```
 
-
-<div class="box-end">
-</div>
-
 ## فعال کردن دسترسی محصول
 با استفاده از سرویس ذیل می توانید دسترسی محصولی به کسب و کار واسط اعطا نموده اید را فعال نمایید.
 
-```
+```C#
 var output = new ResultSrv<DealerProductPermissionSrv>();
 var enableDealerProductPermissionVo= EnableDealerProductPermissionVo.ConcreteBuilder
                     .SetEntityId({Put your EntityId})
@@ -338,13 +308,12 @@ billingService.EnableDealerProductPermission(enableDealerProductPermissionVo,res
 ```
 
 
-<div class="box-end">
-</div>
+
 
 ## غیرفعال کردن دسترسی محصول
  با استفاده از سرویس ذیل می توانید دسترسی محصولی که به کسب و کار واسط اعطا نموده اید را غیرفعال نمایید.
 
-```
+```C#
 var output = new ResultSrv<DealerProductPermissionSrv>();
 var registerUserVo = DisableDealerProductPermissionVo.ConcreteBuilder
                     .SetEntityId({Put your EntityId})
@@ -354,15 +323,13 @@ billingService.DisableDealerProductPermission(registerUserVo,response => Listene
 ```
 
 
-<div class="box-end">
-</div>
 
 # [NodeJS](#tab/nodejs)
 
 ## افزودن کسب‌وکار واسط
 addDealer: در صورتی که بخشی از فروش شما به کسب و کار دیگری تعلق دارد و می خواهید فاکتور به نام همان کسب و کار ثبت شود، لازم است آن کسب و کار، به کسب و کار شما اجازه صدور فاکتور به عنوان معامله گر را داده باشد. با در اختیار داشتن شناسه کسب و کار دیگر با استفاده از این تابع می توانید این اجازه را صادر کنید.
 
-```
+```NodeJS
 let addDealerData = {
   // ------ REQUIRED ------
   dealerBizId: 0 // ID
@@ -378,7 +345,6 @@ podBillingService.addDealer(addDealerData)
     console.log('error addDealer ============>', error);
   });
 ```
-
 
 
 نمونه خروجی
@@ -403,13 +369,10 @@ podBillingService.addDealer(addDealerData)
 ```
 
 
-<div class="box-end">
-</div>
-
 ## لیست کسب‌وکارهای واسط
 dealerList: برای دریافت یا جستجوی لیست تمام کسب و کارهایی که به آنها مجوز معامله و صدور فاکتور داده اید  می توانید از این تابع استفاده کنید
 
-```
+```NodeJS
 let dealerListData = {
   // ------ REQUIRED ------
 
@@ -428,8 +391,6 @@ podBillingService.dealerList(dealerListData)
     console.log('error dealerList ============>', error);
   });
 ```
-
-
 
 نمونه خروجی
 <br>
@@ -473,13 +434,11 @@ podBillingService.dealerList(dealerListData)
 ```
 
 
-<div class="box-end">
-</div>
 
 ## فعالسازی کارگزار
 enableDealer: با استفاده از این تابع می توانید کسب کارهای واسط را فعال کنید
 
-```
+```NodeJS
 let enableDealerData = {
   // ------ REQUIRED ------
   dealerBizId: 0 // ID
@@ -537,13 +496,11 @@ podBillingService.enableDealer(enableDealerData)
 ```
 
 
-<div class="box-end">
-</div>
 
 ## غیرفعالسازی کسب‌وکار واسط
 disableDealer: با استفاده از این تابع می توانید کسب کارهای واسط را غیر فعال کنید
 
-```
+```NodeJS
 let disableDealerData = {
   // ------ REQUIRED ------
   dealerBizId: 0 // ID
@@ -558,8 +515,6 @@ podBillingService.disableDealer(disableDealerData)
     console.log('error disableDealer ============>', error);
   });
 ```
-
-
 
 نمونه خروجی
 <br>
@@ -601,13 +556,10 @@ podBillingService.disableDealer(disableDealerData)
 ```
 
 
-<div class="box-end">
-</div>
-
 ## لیست کسب‌وکارهایی که واسط آن‌ها شده‌اید
 businessDealingList: با فراخوانی سرویس ذیل می توانید لیست کسب و کارهایی که واسط آن ها شده اید را دریافت نمایید.
 
-```
+```NodeJS
 let businessDealingListData = {
   // ------ REQUIRED ------
 
@@ -695,13 +647,11 @@ podBillingService.businessDealingList(businessDealingListData)
 ```
 
 
-<div class="box-end">
-</div>
 
 ## صدور فاکتور تسهیمی
 issueMultiInvoice: کسب و کار معامله گر می تواند با استفاده از این تابع یک فاکتور تسهیمی ثبت نماید
 
-```
+```NodeJS
 let issueMultiInvoiceData = {
   // ------ REQUIRED ------
   data: {
@@ -761,8 +711,6 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
     console.log('error issueMultiInvoice ============>', error);
   });
 ```
-
-
 
 نمونه خروجی
 <br>
@@ -929,15 +877,12 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 ```
 
 
-
-<div class="box-end">
-</div>
-
 #  [PHP](#tab/php)
 
 ## افزودن کسب و کار واسط
 در صورتی که بخشی از فروش شما به کسب و کار دیگری تعلق دارد و می خواهید فاکتور به نام همان کسب و کار ثبت شود، لازم است آن کسب و کار، به کسب و کار شما اجازه صدور فاکتور به عنوان معامله گر را داده باشد. با در اختیار داشتن شناسه کسب و کار دیگر با استفاده از تابع  addDealer می توانید این اجازه را صادر کنید.
 
+      PHP
       $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -960,6 +905,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 برای دریافت یا جستجوی لیست تمام کسب و کارهایی که به آنها مجوز معامله و صدور فاکتور داده اید  می توانید از تابع dealerList استفاده کنید.
    
 
+    PHP
      $param =
             [
                 ## =========================== Optional Parameters  ===========================
@@ -983,6 +929,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 با استفاده از تابع enableDealer می توانید کسب کارهای واسط را فعال کنید.
   
 
+     PHP
       $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -1001,6 +948,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 با استفاده از تابع disableDealer می توانید کسب کارهای واسط را غیر فعال کنید.
    
 
+    PHP
      $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -1019,10 +967,8 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 ## لیست کسب و کارهایی که واسط آن هستید
 با فراخوانی سرویس businessDealingList می توانید لیست کسب و کارهایی که واسط آن ها شده اید را دریافت نمایید.
 
-    $param =
-   
-
-     [
+    PHP
+    $param =     [
             ## =========================== Optional Parameters  ===============================
             'dealingBusinessId' => "{put dealer business id}",            # The id of dealing business
             'enable'            => true,            # [true/false]
@@ -1044,6 +990,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 
    
 
+     PHP
      $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -1125,6 +1072,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 همانند فاکتورهای عادی اگر نیاز به کاهش فاکتور و بر گردادن وجهی به مشتری باشد می توانید از تابع  reduceMultiInvoice استفاده کنید
  
 
+    PHP
     $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -1185,6 +1133,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 
  با استفاده از تابع reduceMultiInvoiceAndCacheOut علاوه بر کاهش فاکتور تسهیمی بلافاصله مبلغ برگشتی به شماره شبا کاربر منتقل گردد. ورودی و خروجی این تابع مشابه با تابع reduceInvoice است
  
+      PHP
         $param =
                         [
                             ## ============================ *Required Parameters  =========================
@@ -1246,7 +1195,8 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 ## مجوز فروش محصول
             با استفاده از تابع addDealerProductPermission به یک کسب و کار دیگر اجازه صدور فاکتور عادی را می توان داد
             
-                $param =
+     PHP
+        $param =
                     [
                         ## =========================== Optional Parameters  ===============================
                         'productId'         => "{put product id}",            # شناسه محصول
@@ -1264,6 +1214,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
  
   با استفاده از تابع dealerProductPermissionList می توانید لیست مجوزهای خود به کسب و کارهای واسط دیگر را به انضمام شناسه محصول مشاهد نمایید.
 
+     PHP
       $param =
                     [
                         ## =========================== Optional Parameters  ===============================
@@ -1289,6 +1240,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
  هم چنین لیست دسترسی هایی که شما واسط آن کسب و کار شده اید و برای آن محصول خاص مجوز صدور فاکتور گرفته اید را می توانید با 
     سرویس dealingProductPermissionList  مشاهده نمایید.
     
+       PHP
         $param =
             [
                 ## =========================== Optional Parameters  ==========================
@@ -1311,6 +1263,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 ## غیر فعال سازی دسترسی محصول برای کسب و کار
  با استفاده از تابع زیر می توانید دسترسی محصولی که به کسب و کار واسط اعطا نموده اید را غیرفعال نمایید
 
+     PHP
       $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -1331,6 +1284,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 با استفاده از تابع زیر می توانید دسترسی محصولی که به کسب و کار واسط اعطا نموده اید را در صورت غیر فعال بودن، مجدد فعال نمایید
 
 
+    PHP
     $param =
         [
             ## ============================ *Required Parameters  =========================
@@ -1349,5 +1303,6 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
         print_r($e->getResult());
     }
 
-<div class="box-end">
+<div class="tab-end">
 </div>
+
