--- a/Entertainment/تسهیم فروش - سرگرمی.md
+++ b/Entertainment/تسهیم فروش - سرگرمی.md
@@ -882,7 +882,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
 ## افزودن کسب و کار واسط
 در صورتی که بخشی از فروش شما به کسب و کار دیگری تعلق دارد و می خواهید فاکتور به نام همان کسب و کار ثبت شود، لازم است آن کسب و کار، به کسب و کار شما اجازه صدور فاکتور به عنوان معامله گر را داده باشد. با در اختیار داشتن شناسه کسب و کار دیگر با استفاده از تابع  addDealer می توانید این اجازه را صادر کنید.
 
-      PHP
+```PHP
       $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -899,13 +899,13 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
         } catch (PodException $e) {
             print_r($e->getResult());
         }
-
+```
 
 ## لیست کسب و کارهایی که به آنها مجوز معامله داده شده 
 برای دریافت یا جستجوی لیست تمام کسب و کارهایی که به آنها مجوز معامله و صدور فاکتور داده اید  می توانید از تابع dealerList استفاده کنید.
    
 
-    PHP
+```PHP
      $param =
             [
                 ## =========================== Optional Parameters  ===========================
@@ -923,13 +923,13 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
         } catch (PodException $e) {
             print_r($e->getResult());
         }
-
+```
 
 ## فعالسازی و غیر فعالسازی مجوز معامله گران
 با استفاده از تابع enableDealer می توانید کسب کارهای واسط را فعال کنید.
   
 
-     PHP
+```PHP
       $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -944,11 +944,12 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
         } catch (PodException $e) {
             print_r($e->getResult());
         }
+```
 
 با استفاده از تابع disableDealer می توانید کسب کارهای واسط را غیر فعال کنید.
    
 
-    PHP
+```PHP
      $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -963,11 +964,12 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
         } catch (PodException $e) {
             print_r($e->getResult());
         }
+```
 
 ## لیست کسب و کارهایی که واسط آن هستید
 با فراخوانی سرویس businessDealingList می توانید لیست کسب و کارهایی که واسط آن ها شده اید را دریافت نمایید.
 
-    PHP
+```PHP
     $param =     [
             ## =========================== Optional Parameters  ===============================
             'dealingBusinessId' => "{put dealer business id}",            # The id of dealing business
@@ -984,13 +986,12 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
     } catch (PodException $e) {
         print_r($e->getResult());
     }
+```
 
 ## صدور فاکتور تسهیمی
-کسب و کار معامله گر که لازم است فاکتور تسهیمی صادر نماید باید از جانب کسب و کارهای سهیم دارای مجوز صدور فاکتور باشد. برای صدور فاکتور تسهیمی می توانید از متد issueMultiInvoice مشابه تابع زیر استفاده کنید:
+کسب و کار معامله گر که لازم است فاکتور تسهیمی صادر نماید باید از جانب کسب و کارهای سهیم دارای مجوز صدور فاکتور باشد. برای صدور فاکتور تسهیمی می توانید از متد issueMultiInvoice مشابه تابع زیر استفاده کنید:  
 
-   
-
-     PHP
+```PHP
      $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -1067,12 +1068,13 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
         } catch (PodException $e) {
             print_r($e->getResult());
         }
+```
 
 ## کاهش فاکتور تسهیمی
 همانند فاکتورهای عادی اگر نیاز به کاهش فاکتور و بر گردادن وجهی به مشتری باشد می توانید از تابع  reduceMultiInvoice استفاده کنید
  
 
-    PHP
+```PHP
     $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -1130,10 +1132,11 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
         } catch (PodException $e) {
             print_r($e->getResult());
         }
+```
 
  با استفاده از تابع reduceMultiInvoiceAndCacheOut علاوه بر کاهش فاکتور تسهیمی بلافاصله مبلغ برگشتی به شماره شبا کاربر منتقل گردد. ورودی و خروجی این تابع مشابه با تابع reduceInvoice است
  
-      PHP
+```PHP
         $param =
                         [
                             ## ============================ *Required Parameters  =========================
@@ -1190,12 +1193,12 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
                     } catch (PodException $e) {
                         print_r($e->getResult());
             
-
+```
 
 ## مجوز فروش محصول
             با استفاده از تابع addDealerProductPermission به یک کسب و کار دیگر اجازه صدور فاکتور عادی را می توان داد
             
-     PHP
+```PHP
         $param =
                     [
                         ## =========================== Optional Parameters  ===============================
@@ -1211,10 +1214,11 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
                 } catch (PodException $e) {
                     print_r($e->getResult());
                 }
+ ```
  
   با استفاده از تابع dealerProductPermissionList می توانید لیست مجوزهای خود به کسب و کارهای واسط دیگر را به انضمام شناسه محصول مشاهد نمایید.
 
-     PHP
+```PHP
       $param =
                     [
                         ## =========================== Optional Parameters  ===============================
@@ -1235,12 +1239,12 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
                 } catch (PodException $e) {
                     print_r($e->getResult());
                 }
-        
+  ```      
 
  هم چنین لیست دسترسی هایی که شما واسط آن کسب و کار شده اید و برای آن محصول خاص مجوز صدور فاکتور گرفته اید را می توانید با 
     سرویس dealingProductPermissionList  مشاهده نمایید.
     
-       PHP
+```PHP
         $param =
             [
                 ## =========================== Optional Parameters  ==========================
@@ -1259,11 +1263,12 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
         } catch (PodException $e) {
             print_r($e->getResult());
         }
+```
 
 ## غیر فعال سازی دسترسی محصول برای کسب و کار
  با استفاده از تابع زیر می توانید دسترسی محصولی که به کسب و کار واسط اعطا نموده اید را غیرفعال نمایید
 
-     PHP
+```PHP
       $param =
             [
                 ## ============================ *Required Parameters  =========================
@@ -1279,12 +1284,13 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
         } catch (PodException $e) {
             print_r($e->getResult());
         }
+```
 
 ## فعال سازی مجدد دسترسی محصول برای کسب و کار
 با استفاده از تابع زیر می توانید دسترسی محصولی که به کسب و کار واسط اعطا نموده اید را در صورت غیر فعال بودن، مجدد فعال نمایید
 
 
-    PHP
+```PHP
     $param =
         [
             ## ============================ *Required Parameters  =========================
@@ -1302,6 +1308,7 @@ podBillingService.issueMultiInvoice(issueMultiInvoiceData)
     } catch (PodException $e) {
         print_r($e->getResult());
     }
+```
 
 <div class="tab-end">
 </div>
