Update 06 - کیف پول.md

--- a/Transportation/06 - کیف پول.md
+++ b/Transportation/06 - کیف پول.md
@@ -22,7 +22,7 @@ GET  [private-calls-address]/v1/pbc/BuyCredit/
 
 در این حالت کاربر صفحه انتخاب بسته را نمی‌بیند و مستقیماً وارد درگاه بانکی می‌گردد. برای این منظور کاربر را به صفحه زیر هدایت نمایید:
 
-```
+``` javascript
 GET [private-calls-address]/v1/pbc/BuyCredit/
 ?amount= [the amount to charge wallet]
 &redirectUri=[redirectURL]
