Update تسهیم فروش - سرگرمی.md

--- a/Entertainment/تسهیم فروش - سرگرمی.md
+++ b/Entertainment/تسهیم فروش - سرگرمی.md
@@ -372,7 +372,7 @@ podBillingService.addDealer(addDealerData)
 ## لیست کسب‌وکارهای واسط
 dealerList: برای دریافت یا جستجوی لیست تمام کسب و کارهایی که به آنها مجوز معامله و صدور فاکتور داده اید  می توانید از این تابع استفاده کنید
 
-```JS
+```node.js
 let dealerListData = {
   // ------ REQUIRED ------
 
