--- a/Banking/01 - عملیات سپرده.md
+++ b/Banking/01 - عملیات سپرده.md
@@ -56,6 +56,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 با توجه به این که پارامتر **BatchPayaItemInfos** ازنوع آرایه ای میباشد در زمان فراخوانی به شکل زیر مقادیر را  ارسال خواهیم کرد .
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -92,6 +93,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
            paramNames= signature *
            paramValues= [your signature] *
+```
 
 <div class="box-end">
 </div>
@@ -128,6 +130,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 فراخوانی سرویس " **دریافت صورتحساب سپرده** "  توسط سرویس فراخوانی پاد
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -150,6 +153,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [your EndDate] *
            paramNames= Signature *
            paramValues= [your Signature] *
+```
 
 <div class="box-end">
 </div>
@@ -182,6 +186,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 فراخوانی سرویس " **دریافت موجودی سپرده** "  توسط سرویس فراخوانی پاد
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -200,6 +205,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [your ShebaCode] *
            paramNames= Signature *
            paramValues= [your Signature] *
+```
 
 <div class="box-end">
 </div>
@@ -248,6 +254,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 فراخوانی سرویس " **انتقال وجه داخلی**"  توسط سرویس فراخوانی پاد
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -283,6 +290,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [your Timestamp] *
            paramNames= Signature *
            paramValues= [your Signature] *
+```
 
 <div class="box-end">
 </div>
@@ -317,6 +325,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 فراخوانی سرویس " **دریافت وضعیت انتقال وجه** "  توسط سرویس فراخوانی پاد
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -334,6 +343,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [your PaymentId] *
            paramNames= Signature *
            paramValues= [your Signature] *
+```
 
 <div class="box-end">
 </div>
@@ -371,6 +381,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 فراخوانی سرویس " **پرداخت قبض از طریق سپرده** "  توسط سرویس فراخوانی سرویس پاد
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -391,8 +402,10 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [ your PaymentId] *
            paramNames= signature *
            paramValues= [ your signature] *
+```
 
 و **Data**: نتیجه بازگشتی شامل دو مقدار می‌باشد که با علامت **#** تفکیک شده اند. (**a#b**) که مقدار اول (**a**) به معنی شماره پیگیری و مقدار دوم (**b**) شماره ارجاع می‌باشد.
+
 <div class="box-end">
 </div>
 
@@ -425,6 +438,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 فراخوانی سرویس " **تبدیل شماره سپرده به شبا** "  توسط سرویس فراخوانی سرویس پاد
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -441,6 +455,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [ your Timestamp ] *
            paramNames= signature *
            paramValues= [ your signature] *
+```
 
 <div class="box-end">
 </div>
@@ -469,6 +484,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 فراخوانی سرویس " **تبدیل شماره شبا به شماره سپرده** "  توسط سرویس فراخوانی سرویس پاد
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -485,6 +501,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [your Timestamp] *
            paramNames= signature *
            paramValues= [your signature] *
+```
 
 <div class="box-end">
 </div>
@@ -517,6 +534,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 فراخوانی سرویس " **دریافت اطلاعات شبا** "  توسط سرویس فراخوانی سرویس پاد 
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -535,6 +553,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [Your ShenaseVariz ]
            paramNames= signature *
            paramValues= [ your signature ] *
+```
 
 <div class="box-end">
 </div>
